# aerugo

./: Cargo.toml
arch/cortex-m/samv71-hal/: Cargo.toml
arch/cortex-m/samv71-hal/samv71q21/: Cargo.toml
arch/cortex-m/samv71-hal/src/: hal.rs  lib.rs  peripherals.rs  watchdog.rs
calldwell/: uart.py
examples/samv71q21-hal-watchdog/: Cargo.toml
examples/samv71q21-hello-world/: Cargo.toml  build.rs
examples/samv71q21-hello-world/src/: main.rs
scripts/: uart_echo_example.py
src/: aerugo.rs
src/tasklet/: tasklet_ptr.rs  tasklet_storage.rs
