[package]
authors = ["Wojciech Olech <wojciech_olech@hotmail.com>"]
edition = "2021"
name = "samv71q21-hello-world-baremetal"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", features = ["device"] }
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
samv71q21-pac = { version = "*", path = "../../arch/cortex-m/samv71q21-pac" }

[features]
rt = ["cortex-m-rt/device"]

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
codegen-units = 1
lto = true
